// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-jcFjpl fmaHgx"
  >
    <div
      class="sc-caiLqq fJSxRO"
    >
      <div
        class="sc-iUKqMP gKBHJc"
      >
        <div
          class="sc-jObWnj sc-bBHHxi egWnei kOXwzt"
        >
          ERROR
        </div>
        <h4
          class="sc-jgrJph krhPQU"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-iAKWXU"
      >
        <pre
          class="sc-lbhJGD hiKYW"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-cTAqQK gxIQKW"
      >
        <a
          class="sc-efQSVx dbxkZS"
        >
          <i
            class="sc-bdvvtL jWhaJw fa fa-play-circle-o"
            style="line-height: inherit;"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-jcFjpl fmaHgx"
  >
    <div
      class="sc-caiLqq fJSxRO"
    >
      <div
        class="sc-iUKqMP gKBHJc"
      >
        <div
          class="sc-jObWnj sc-bBHHxi egWnei kOXwzt"
        >
          ERROR
        </div>
        <h4
          class="sc-jgrJph krhPQU"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-iAKWXU"
      >
        <pre
          class="sc-lbhJGD hiKYW"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
